tests/local_inference_annotations/freeze.js
// @flow

const noHint = Object.freeze({f: x => {}}); // error
const withHint: {readonly f: number => void} = Object.freeze({f: x => {}});
Object.freeze({f: x => {}}) as {readonly f: number => void};
